--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -59,6 +59,7 @@ RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key
 ADD ./run.sh			/
 RUN chmod 755 /run.sh
 
+ADD ./authorized_keys /root/.ssh/authorized_keys
 
 CMD ['/run.sh']
 
