--- a/NginxPHP/test.conf
+++ b/NginxPHP/test.conf
@@ -1,9 +1,9 @@
 server {
-        listen       80;
-        server_name  www.test.com;
+        listen       8000;
+        server_name  182.92.189.177;
         index   index.php index.html;
 
-        root    /.../commerce/kiwi/public;
+        root    /home/cupid/love/public;
 
         location / {
         index index.php index.html;
@@ -19,7 +19,7 @@ server {
             include        fastcgi_params;
         }
 
-        access_log  /var/log/nginx/access.log;
-        error_log  /var/log/nginx/error.log;
+        access_log  /var/log/nginx/cupid/access.log;
+        error_log  /var/log/nginx/cupid/error.log;
 }
 
