--- a/Node/Dockerfile
+++ b/Node/Dockerfile
@@ -48,6 +48,13 @@ RUN cd vim73 && ./configure --enable-netbeans --disable-selinux --enable-multiby
 #install node 0.12.4
 RUN cd node-v0.12.4 && ./configure && make && make install
 
+RUN cp /usr/local/bin/node	/usr/sbin/
+RUN cp /usr/local/bin/npm	/usr/sbin/npm
+
+RUN npm install -g express
+RUN npm install -g supervisor
+
+#RUN cp /usr/local/bin/supervisor /usr/sbin/
 
 RUN ssh-keygen -t dsa -f /etc/ssh/ssh_host_dsa_key
 RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key
@@ -55,6 +62,9 @@ RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key
 
 ADD ./run.sh			/
 RUN chmod 755 /run.sh
+ADD ./authorized_keys /root/.ssh/authorized_keys
+
+RUN yum clean all
 
 CMD ["/run.sh"]
 
