--- a/Nginx/Dockerfile
+++ b/Nginx/Dockerfile
@@ -2,47 +2,14 @@
 #
 #VERSION       1.0
 #Software installed:
-#					sshd
-#					vim
-#					git
 #					nginx1.8
 #
 
-FROM centos:6
+FROM nester/base:1
 MAINTAINER wuhui "wuhui@shinc.com"
 ENV REFRESHED_AT 2015-05-29
 
-ADD ./git-2.3.0.tar.gz	/root
-ADD ./vim-7.3.tar.bz2	/root
-ADD ./vim.tar.gz		/root
-
-
 WORKDIR /root
-
-#Update software library
-RUN yum -y update
-
-#install development tools
-RUN yum -y groupinstall 'Development Tools'
-
-#install sshd
-RUN yum -y install openssh-server
-
-#install tar
-RUN yum -y install tar
-
-#install zlib zlib-devel perl-devel
-#compile git need
-RUN yum -y install zlib zlib-devel perl-devel
-
-#install git 2.3.0
-RUN cd git-2.3.0 && ./configure && make && make install
-
-#install ncurses ncurses-devel
-RUN yum -y install ncurses ncurses-devel
-
-#install vim 7.3
-RUN cd vim73 && ./configure --enable-netbeans --disable-selinux --enable-multibyte --enable-fontset --with-vim-name=vi --with-features=huge && make && make install
 
 #install nginx
 RUN rpm -ivh http://nginx.org/packages/centos/6/noarch/RPMS/nginx-release-centos-6-0.el6.ngx.noarch.rpm
@@ -53,13 +20,14 @@ RUN echo "daemon off;" >> /etc/nginx/nginx.conf
 
 ADD ./test.conf /etc/nginx/conf.d/
 
-RUN ssh-keygen -t dsa -f /etc/ssh/ssh_host_dsa_key
-RUN ssh-keygen -t rsa -f /etc/ssh/ssh_host_rsa_key
-
 ADD ./run.sh			/
 RUN chmod 755 /run.sh
 
+
+ADD ./authorized_keys /root/.ssh/authorized_keys_tmp
+RUN cat /root/.ssh/authorized_keys_tmp >> /root/.ssh/authorized_keys
+RUN rm -f authorized_keys_tmp
+
 CMD ['/run.sh']
 
-EXPOSE	22
 EXPOSE  80
