--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -15,9 +15,11 @@ RUN rpm -ivh http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-
 RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-6
 RUN rpm -ivh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
 RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi
+#RUN rpm -Uvh http://mirror.webtatic.com/yum/el7/latest.rpm
 
-RUN yum --enablerepo=remi install -y mysql mysql-server
-
+RUN yum install -y mysql mysql-server
+#RUN rpm -Uvh http://mirror.steadfast.net/epel/6/i386/epel-release-6-8.noarch.rpm
+#RUN rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
 
 ADD ./run.sh			/
 RUN chmod 755 /run.sh
