--- a/MySQL/Dockerfile
+++ b/MySQL/Dockerfile
@@ -2,7 +2,7 @@
 #
 #VERSION       1.0
 #Software installed:
-#					mysql5.5
+#					mysql5.5.45
 #
 
 FROM wuhui/base:1
@@ -11,15 +11,40 @@ ENV REFRESHED_AT 2015-05-29
 
 WORKDIR /root
 
-RUN rpm -ivh http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
-RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-6
-RUN rpm -ivh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
-RUN rpm --import /etc/pki/rpm-gpg/RPM-GPG-KEY-remi
-#RUN rpm -Uvh http://mirror.webtatic.com/yum/el7/latest.rpm
 
-RUN yum install -y mysql mysql-server
-#RUN rpm -Uvh http://mirror.steadfast.net/epel/6/i386/epel-release-6-8.noarch.rpm
-#RUN rpm -Uvh http://rpms.famillecollet.com/enterprise/remi-release-6.rpm
+ADD ./mysql-5.5.45.tar.gz	/root
+
+RUN yum -y install cmake
+
+RUN	cd /root/mysql-5.5.45 && cmake \
+								-DCMAKE_INSTALL_PREFIX=/usr/local/mysql \
+								-DMYSQL_DATADIR=/usr/local/mysql/data \
+								-DSYSCONFDIR=/etc \
+								-DWITH_MYISAM_STORAGE_ENGINE=1 \
+								-DWITH_INNOBASE_STORAGE_ENGINE=1 \
+								-DWITH_MEMORY_STORAGE_ENGINE=1 \
+								-DWITH_READLINE=1 \
+								-DMYSQL_UNIX_ADDR=/var/lib/mysql/mysql.sock \
+								-DMYSQL_TCP_PORT=3306 \
+								-DENABLED_LOCAL_INFILE=1 \
+								-DWITH_PARTITION_STORAGE_ENGINE=1 \
+								-DEXTRA_CHARSETS=all \
+								-DDEFAULT_CHARSET=utf8 \
+								-DDEFAULT_COLLATION=utf8_general_ci && make && make install
+
+RUN groupadd mysql
+RUN useradd -g mysql mysql
+
+RUN chown -R mysql:mysql /usr/local/mysql
+
+RUN cd /usr/local/mysql && scripts/mysql_install_db --basedir=/usr/local/mysql --datadir=/var/lib/mysql --user=mysql
+
+RUN cp /usr/local/mysql/support-files/mysql.server /etc/init.d/mysql
+
+RUN echo "PATH=/usr/local/mysql/bin:\$PATH;export PATH" >> /etc/profile
+RUN	source /etc/profile
+
+RUN cp /usr/local/mysql/support-files/my-medium.cnf /etc/my.cnf
 
 ADD ./run.sh			/
 RUN chmod 755 /run.sh
